<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>daly_bms</name>
  <version>1.0.0</version>
  <description>
    Daly BMS ROS driver.
  </description>

  <maintainer email="aarnal@robotnik.es">Alex Arnal</maintainer>
  <license>MIT</license>
  <author email="aarnal@robotnik.es">Alex Arnal</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
